Bug #13957 yassl: opensrv6c compile failure
Submitted: 12 Oct 2005 9:41 Modified: 22 Nov 2005 9:39
Reporter: Magnus Blåudd Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Compiling Severity:S1 (Critical)
Version: OS:
Assigned to: Magnus Blåudd CPU Architecture:Any

[12 Oct 2005 9:41] Magnus Blåudd
Description:
02466: 
02467: source='lock.cpp' object='lock.lo' libtool=yes \
02468: depfile='.deps/lock.Plo' tmpdepfile='.deps/lock.TPlo' \
02469: depmode=none /bin/bash ../../../depcomp \
02470: /bin/bash ../../../libtool --preserve-dup-deps --mode=compile CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL   -DYASSL_PURE_C -O3 -DDBUG_OFF    -Kalloca -Kalloca -c -o lock.lo lock.cpp
02471:  CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL -DYASSL_PURE_C -O3 -DDBUG_OFF -Kalloca -Kalloca -c lock.cpp -o lock.o
02472: source='log.cpp' object='log.lo' libtool=yes \
02473: depfile='.deps/log.Plo' tmpdepfile='.deps/log.TPlo' \
02474: depmode=none /bin/bash ../../../depcomp \
02475: /bin/bash ../../../libtool --preserve-dup-deps --mode=compile CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL   -DYASSL_PURE_C -O3 -DDBUG_OFF    -Kalloca -Kalloca -c -o log.lo log.cpp
02476:  CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL -DYASSL_PURE_C -O3 -DDBUG_OFF -Kalloca -Kalloca -c log.cpp -o log.o
02477: source='socket_wrapper.cpp' object='socket_wrapper.lo' libtool=yes \
02478: depfile='.deps/socket_wrapper.Plo' tmpdepfile='.deps/socket_wrapper.TPlo' \
02479: depmode=none /bin/bash ../../../depcomp \
02480: /bin/bash ../../../libtool --preserve-dup-deps --mode=compile CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL   -DYASSL_PURE_C -O3 -DDBUG_OFF    -Kalloca -Kalloca -c -o socket_wrapper.lo socket_wrapper.cpp
02481:  CC -Kthread -DUNIXWARE_7 -DHAVE_BROKEN_RWLOCK -DHAVE_CONFIG_H -I. -I. -I../../.. -I../include -I../taocrypt/include -I../mySTL -DYASSL_PURE_C -O3 -DDBUG_OFF -Kalloca -Kalloca -c socket_wrapper.cpp -o socket_wrapper.o
02482: "socket_wrapper.cpp", line 105: error: identifier "FIONREAD" is undefined
02483:       ioctl(socket_, FIONREAD, &ready);
02484:                      ^
02485: 
02486: "socket_wrapper.cpp", line 50: warning: variable "SOCKET_EINVAL" was declared but never referenced
02487:       const int SOCKET_EINVAL = EINVAL;
02488:                 ^
02489: 
02490: "socket_wrapper.cpp", line 51: warning: variable "SOCKET_EWOULDBLOCK" was declared but never referenced
02491:       const int SOCKET_EWOULDBLOCK = EWOULDBLOCK;
02492:                 ^
02493: 
02494: gmake[3]: *** [socket_wrapper.lo] Error 1
02495: gmake[3]: Leaving directory `/home/mysqldev/opnsrv6c/mysql-5.0.15-rc-yassl/extra/yassl/src'
02496: gmake[2]: *** [all-recursive] Error 1
02497: gmake[2]: Leaving directory `/home/mysqldev/opnsrv6c/mysql-5.0.15-rc-yassl/extra/yassl'
02498: gmake[1]: *** [all-recursive] Error 1
02499: gmake[1]: Leaving directory `/home/mysqldev/opnsrv6c/mysql-5.0.15-rc-yassl'
02500: gmake: *** [all] Error 2
02501: 
02502: error: Couldn't execute command, error: 2

How to repeat:
Build failure
[3 Nov 2005 9:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/31864
[22 Nov 2005 9:39] Magnus Blåudd
Pushed to 5.0.16