Bug#13957 yassl: opensrv6c compile failure  - Added some ifdefs and turn off auto template instantiation, use explicit template instantiation

configure.in:
  Use -Tno_implict to indicate that we specifiy which template should be instantiated.
  Turn on HAVE_EXPLICIT_TEMPLATE_INSTATNTIATION
extra/yassl/src/socket_wrapper.cpp:
  Include sys/filio.h if __SCO_VERSION__ is defined
extra/yassl/src/timer.cpp:
  Dont' include files from within namespace yaSSL.